[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from 'Bevy Basics Remastered' by PhaestusFox"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "bevy-basics-remastered"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/bevy-basics-remastered"
rust-version = "1.90.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
bevy = "0.16.1"
rand = "0.9.2"

[dev-dependencies]

[features]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
